# HMW2_RL_2024

arm_dynamixel/: README.md
arm_dynamixel/DynamixelSDK/dynamixel_sdk_custom_interfaces/: CMakeLists.txt
arm_dynamixel/DynamixelSDK/dynamixel_sdk_custom_interfaces/srv/: GetPositions.srv
arm_dynamixel/DynamixelSDK/dynamixel_sdk_examples/include/: read_write_node.hpp
arm_dynamixel/DynamixelSDK/dynamixel_sdk_examples/src/: read_write_node.cpp
arm_dynamixel/arm_description/: CMakeLists.txt  package.xml
arm_dynamixel/arm_description/config/rviz/: rviz.rviz  standing.rviz
arm_dynamixel/arm_description/launch/: display.launch.py
arm_dynamixel/arm_description/urdf/: arm.urdf.xacro
arm_dynamixel/kdl_arm_dynamixel/: CMakeLists.txt  package.xml
arm_dynamixel/kdl_arm_dynamixel/src/: main_real.cpp  main_rviz.cpp
points_1_2_/: Comandi_lancio_HW2
points_1_2_/include/: kdl_control.h  kdl_planner.h  utils.h
points_1_2_/src/: kdl_control.cpp  kdl_planner.cpp  ros2_kdl_node.cpp
ros2_iiwa/iiwa_description/config/: iiwa_controllers.yaml
ros2_iiwa/iiwa_description/urdf/: iiwa.urdf.xacro
